# autoresearch-oss

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
cli/: ars.py  repl.py  session.py
cli/commands/: apply.py  config.py  deploy.py  diff.py  init.py  login.py  results.py  run.py  status.py  upgrade.py
cli/skills/: SKILL.md
cli/tests/: test_cli_regression.py
docs/: demo.cast
evals/: __init__.py  base.py  bash_script.py  http_endpoint.py  llm_judge.py  python_script.py
evals/scripts/: llm_judge_eval.py  test_cases_eval.py
examples/: case-study-copy-optimization.md
runner/: git_ratchet.py  loop.py  program_parser.py  results.py  strategy.py
runner/tests/: test_loop_features.py  test_strategy.py
templates/config-tune/: config.yaml  eval.sh  program.md
templates/copy-opt/: eval.py  landing_copy.txt  program.md
templates/prompt-opt/: eval.py  program.md  system_prompt.txt  test_cases.json
templates/sop/: eval.py  program.md  sop.md
templates/test-pass/: eval.sh  program.md  solution.py  test_solution.py
tests/: test_eval_adapters.py  test_program_parser.py  test_results.py
